Clean-up and bug fixes

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -7,6 +7,16 @@
         white-space nowrap
         overflow hidden
         text-overflow ellipsis
+        position relative
+
+        .btn.copy-link
+            background #fff
+
+            &:hover, &:focus
+                text-decoration none
+
+            &:focus
+                outline none
 
     // Request name in Task detail page
     h5
