--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -49,3 +49,8 @@ table th
 
 .page-header small
     margin-left 1em
+
+code
+    border 1px solid rgba(0, 0, 0, .075)
+    background rgba(0, 0, 0, .05)
+    color rgba(0, 0, 0, .75)
