--- a/SingularityUI/app/templates/requestDetail/requestHeader.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHeader.hbs
@@ -15,7 +15,9 @@
                 </span>
             </h4>
 
-            <h2>{{ data.id }}</h2>
+            <h2>
+                {{ data.id }}
+            </h2>
         </div>
 
         {{! Right side, buttons }}
