--- a/SingularityUI/app/templates/slaves/dead.hbs
+++ b/SingularityUI/app/templates/slaves/dead.hbs
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Dead slaves</h1>
+    <h1>Dead</h1>
 </div>
 {{#if data.length}}
     <table class="table table-striped">
