--- a/SingularityUI/app/templates/taskDetail/taskS3Logs.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskS3Logs.hbs
@@ -21,7 +21,7 @@
                             </a>
                         </td>
                         <td>
-                            {{humanFileSize size}}
+                            {{humanizeFileSize size}}
                         </td>
                         <td data-value="{{ lastModified }}">
                             {{timestampFormatted lastModified}}
