--- a/SingularityUI/app/templates/racks/active.hbs
+++ b/SingularityUI/app/templates/racks/active.hbs
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Active racks</h1>
+    <h1>Active</h1>
 </div>
 {{#if data.length}}
     <table class="table table-striped">
@@ -16,7 +16,7 @@
                     <td>{{ id }}</td>
                     <td data-value="{{ uptime }}">
                         {{timestampDuration uptime}}
-                        ({{timestampFormatted startedAt}})
+                        ({{timestampFormatted firstSeenAt}})
                     </td>
                     <td class="actions-column">
                         <a data-rack-id="{{ id }}" data-action="decomission">
