--- a/SingularityUI/app/templates/slaves/decomissioning.hbs
+++ b/SingularityUI/app/templates/slaves/decomissioning.hbs
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Decomissioning slaves</h1>
+    <h1>Decomissioning</h1>
 </div>
 {{#if data.length}}
     <table class="table table-striped">
