Flash background instead of expanding

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -54,3 +54,9 @@ code
     border 1px solid rgba(0, 0, 0, .075)
     background rgba(0, 0, 0, .05)
     color rgba(0, 0, 0, .75)
+
+.flash-background
+    background: #fbfbfb
+
+    .page-header
+        background: rgba(0, 123, 255, .1)
