Improved handling of file browser errors

--- a/SingularityUI/app/templates/taskDetail/taskFileBrowser.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskFileBrowser.hbs
@@ -64,7 +64,9 @@
         </div>
     {{else}}
         <div class="page-loader-container">
-            <div class="page-loader centered"></div>
+            <div class="empty-table-message">
+                Could not get files. The task is probably still starting up.
+            </div>
         </div>
     {{/if}}
 {{/if}}
