--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -43,8 +43,10 @@ a.disabled:hover
 table th
     text-align left
 
-#page
+#page, .navbar .container-fluid
     max-width 1500px
+    
+#page
     padding 0 20px 50px 20px
 
 .page-header small
