--- a/SingularityUI/app/templates/nav.hbs
+++ b/SingularityUI/app/templates/nav.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-links">
                 <span class="sr-only">Toggle navigation</span>
