--- a/SingularityUI/app/templates/requestDetail/requestHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistory.hbs
@@ -2,47 +2,45 @@
     <h2>Request history</h2>
 </div>
 {{#if data.length}}
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            State
-                        </th>
-                        <th>
-                            User
-                        </th>
-                        <th class="hidden-xs">
-                            Created
-                        </th>
-                        <th class="hidden-xs">
-                            {{! Actions }}
-                        </th>
+    <div class="table-container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>
+                        State
+                    </th>
+                    <th>
+                        User
+                    </th>
+                    <th class="hidden-xs">
+                        Created
+                    </th>
+                    <th class="hidden-xs">
+                        {{! Actions }}
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each data}}
+                    <tr data-id="{{ createdAt }}" data-collection="requestHistory">
+                        <td>
+                            {{humanizeText state}}
+                        </td>
+                        <td>
+                            {{usernameFromEmail user}}
+                        </td>
+                        <td class="hidden-xs" data-value="{{ createdAt }}">
+                            {{timestampFromNow createdAt}}
+                        </td>
+                        <td class="hidden-xs actions-column">
+                            <a data-action="viewJSON">
+                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            </a>
+                        </td>
                     </tr>
-                </thead>
-                <tbody>
-                    {{#each data}}
-                        <tr data-id="{{ createdAt }}" data-collection="requestHistory">
-                            <td>
-                                {{humanizeText state}}
-                            </td>
-                            <td>
-                                {{usernameFromEmail user}}
-                            </td>
-                            <td class="hidden-xs" data-value="{{ createdAt }}">
-                                {{timestampFromNow createdAt}}
-                            </td>
-                            <td class="hidden-xs actions-column">
-                                <a data-action="viewJSON">
-                                    <span class="glyphicon glyphicon-th-list" title="JSON"></span>
-                                </a>
-                            </td>
-                        </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-        </div>
+                {{/each}}
+            </tbody>
+        </table>
     </div>
 {{else}}
     {{#if synced}}
