--- a/SingularityUI/app/templates/requestsTable/requestsBase.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsBase.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-9">
         <ul class="nav nav-pills table-nav-pills">
             <li class="{{#ifEqual requestsFilter "all"}}active{{/ifEqual}}">
                 <a href="{{appRoot}}/requests">All</a>
@@ -20,6 +20,12 @@
                 <a href="{{appRoot}}/requests/cleaning">Cleaning</a>
             </li>
         </ul>
+    </div>
+    <div class="col-md-3 hidden-xs hidden-sm">
+        <a href="{{appRoot}}/requests/new" class="btn btn-success btn-large pull-right">
+            <span class="glyphicon glyphicon-plus"></span>
+            New request
+        </a>
     </div>
 </div>
 
