--- a/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
@@ -1,5 +1,7 @@
 <div class="page-header">
-    <h2>Deploy history</h2>
+    <h2>
+        Deploy history
+    </h2>
 </div>
 {{#if data.length}}
     <div class="table-container">
