--- a/SingularityUI/app/templates/requestDetail/requestHeader.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHeader.hbs
@@ -26,6 +26,10 @@
                 JSON
             </a>
 
+            <a href="{{appRoot}}/request/{{data.id}}/deploy" class="btn btn-success">
+                Deploy
+            </a>
+
             {{#if data.canBeRunNow}}
                 {{#unless data.deleted}}
                     <a class="btn btn-primary" data-request-id="{{ data.id }}" data-request-type="{{#if data.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">
