Clicking disabled buttons no longer selects

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -65,3 +65,8 @@ code
 
     .page-header
         background: rgba(0, 123, 255, .1)
+
+.btn-group, .btn-group .btn
+    -webkit-user-select none
+    -moz-user-select none
+    -ms-user-select none
