--- a/SingularityUI/app/templates/taskDetail/taskEnvironment.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskEnvironment.hbs
@@ -2,12 +2,16 @@
     <div class="page-header">
         <h2>
             Environment variables
-            <small><a data-action="expandList">
+            <small><a data-action="expandToggle">
+            {{#if expanded}}
+                collapse
+            {{else}}
                 view
-            </a></small>
+            {{/if}}
+        </a></small>
         </h2>
     </div>
-    <div class="row hidden">
+    <div class="row {{#unless expanded}}hide{{/unless}}">
         <ul class="list-unstyled horizontal-description-list">
             {{#each data.task.mesosTask.executor.command.environment.variables}}
                 <li class="col-md-4">
