Kill tasks is checked by default

--- a/SingularityUI/app/templates/vex/requestPause.hbs
+++ b/SingularityUI/app/templates/vex/requestPause.hbs
@@ -3,7 +3,7 @@
 {{#if scheduled}}
     <div>
         <label for="kill-tasks">
-            <input type="checkbox" id="kill-tasks">
+            <input type="checkbox" id="kill-tasks" checked>
             Kill tasks
         </label>
     </div>
