Tailer style changes

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -53,14 +53,7 @@
         min-height 1.6em // Show empty lines too
         line-height 1.6em
         padding 0 2em
-        white-space pre-wrap
-        word-break break-all
-        
-        &:nth-child(2n)
-            background rgba(0, 0, 0, .05)
-
-        &:hover
-            background rgba(0, 0, 0, .1)
+        white-space pre
 
 // States
 .tailing
