--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -27,6 +27,9 @@ a.disabled:hover
 
 // Overrides
 
+.vex-loading-spinner
+    top 45% !important
+
 .messenger-message
     background #fff !important
 
