Move icon title to anchor

--- a/SingularityUI/app/templates/racks/active.hbs
+++ b/SingularityUI/app/templates/racks/active.hbs
@@ -19,8 +19,8 @@
                         ({{timestampFormatted firstSeenAt}})
                     </td>
                     <td class="actions-column">
-                        <a data-rack-id="{{ id }}" data-action="decomission">
-                            <span class="glyphicon glyphicon-remove" title="Decommission"></span>
+                        <a data-rack-id="{{ id }}" data-action="decomission" title="Decommission">
+                            <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
                 </tr>
