--- a/SingularityUI/app/templates/racks/dead.hbs
+++ b/SingularityUI/app/templates/racks/dead.hbs
@@ -22,8 +22,8 @@
                         {{timestampDuration uptime}}
                     </td>
                     <td class="actions-column">
-                        <a data-rack-id="{{ id }}" data-action="remove">
-                             <span class="glyphicon glyphicon-trash" title="Remove"></span>
+                        <a data-rack-id="{{ id }}" data-action="remove" title="Remove">
+                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
                 </tr>
