--- a/SingularityUI/app/templates/racks/decomissioning.hbs
+++ b/SingularityUI/app/templates/racks/decomissioning.hbs
@@ -26,8 +26,8 @@
                         {{timestampDuration uptime}}
                     </td>
                     <td class="actions-column">
-                        <a data-rack-id="{{ id }}" data-action="remove" data-state="{{ state }}">
-                             <span class="glyphicon glyphicon-trash" title="Remove"></span>
+                        <a data-rack-id="{{ id }}" data-action="remove" data-state="{{ state }}" title="Remove">
+                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
                 </tr>
