--- a/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
@@ -30,8 +30,8 @@
                             ({{timestampFormatted deployMarker.timestamp}})
                         </td>
                         <td class="hidden-xs actions-column">
-                            <a data-action="viewJSON">
-                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            <a data-action="viewJSON" title="JSON">
+                                <span class="glyphicon glyphicon-th-list"></span>
                             </a>
                         </td>
                     </tr>
