--- a/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistoricalTasks.hbs
@@ -49,11 +49,11 @@
                             {{timestampFromNow updatedAt}}
                         </td>
                         <td class="hidden-xs actions-column">
-                            <a href="{{appRoot}}/task/{{ taskId.id }}/files/">
-                                <span class="glyphicon glyphicon-file" title="Files"></span>
+                            <a href="{{appRoot}}/task/{{ taskId.id }}/files/" title="Files">
+                                <span class="glyphicon glyphicon-file"></span>
                             </a>
-                            <a data-action="viewJSON">
-                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            <a data-action="viewJSON" title="JSON">
+                                <span class="glyphicon glyphicon-th-list"></span>
                             </a>
                         </td>
                     </tr>
