--- a/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsActiveBody.hbs
@@ -73,15 +73,15 @@
 
                         <td class="actions-column hidden-xs">
                             {{#if canBeRunNow}}
-                                <a data-request-id="{{ request.id }}" data-request-type="{{#if scheduled}}scheduled{{else}}on-demand{{/if}}" data-action="run-now">
-                                    <span class="glyphicon glyphicon-repeat" title="Run now"></span>
+                                <a data-request-id="{{ request.id }}" data-request-type="{{#if scheduled}}scheduled{{else}}on-demand{{/if}}" data-action="run-now" title="Run now">
+                                    <span class="glyphicon glyphicon-repeat"></span>
                                 </a>
                             {{/if}}
-                            <a data-request-id="{{ request.id }}" data-action="remove">
-                                <span class="glyphicon glyphicon-trash" title="Remove"></span>
+                            <a data-request-id="{{ request.id }}" data-action="remove" title="Remove">
+                                <span class="glyphicon glyphicon-trash"></span>
                             </a>
-                            <a data-request-id="{{ request.id }}" data-action="viewJSON">
-                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            <a data-request-id="{{ request.id }}" data-action="viewJSON" title="JSON">
+                                <span class="glyphicon glyphicon-th-list"></span>
                             </a>
                         </td>
                     </tr>
