--- a/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
@@ -48,14 +48,14 @@
                         {{/ifInSubFilter}}
 
                         <td class="actions-column hidden-xs">
-                            <a data-request-id="{{ request.id }}" data-action="unpause">
-                                <span class="glyphicon glyphicon-play" title="Unpause"></span>
+                            <a data-request-id="{{ request.id }}" data-action="unpause" title="Unpause">
+                                <span class="glyphicon glyphicon-play"></span>
                             </a>
-                            <a data-request-id="{{ request.id }}" data-action="remove">
-                                <span class="glyphicon glyphicon-trash" title="Remove"></span>
+                            <a data-request-id="{{ request.id }}" data-action="remove" title="Remove">
+                                <span class="glyphicon glyphicon-trash"></span>
                             </a>
-                            <a data-request-id="{{ request.id }}" data-action="viewJSON">
-                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            <a data-request-id="{{ request.id }}" data-action="viewJSON" title="JSON">
+                                <span class="glyphicon glyphicon-th-list"></span>
                             </a>
                         </td>
                     </tr>
