--- a/SingularityUI/app/templates/slaves/active.hbs
+++ b/SingularityUI/app/templates/slaves/active.hbs
@@ -25,8 +25,8 @@
                         ({{timestampFormatted firstSeenAt}})
                     </td>
                     <td class="actions-column">
-                        <a data-slave-id="{{ id }}" data-action="decommission">
-                            <span class="glyphicon glyphicon-remove" title="Decommission"></span>
+                        <a data-slave-id="{{ id }}" data-action="decommission" title="Decommission">
+                            <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
                 </tr>
