--- a/SingularityUI/app/templates/taskDetail/taskS3Logs.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskS3Logs.hbs
@@ -28,8 +28,8 @@
                                 {{timestampFormatted lastModified}}
                             </td>
                             <td class="actions-column">
-                                <a href="{{ getUrl }}" target="_blank">
-                                    <span class="glyphicon glyphicon-download-alt" title="Download"></span>
+                                <a href="{{ getUrl }}" target="_blank" title="Download">
+                                    <span class="glyphicon glyphicon-download-alt"></span>
                                 </a>
                             </td>
                         </tr>
