--- a/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksActiveBody.hbs
@@ -52,11 +52,11 @@
                         {{ memoryMb }} MB
                     </td>
                     <td class="actions-column hidden-xs">
-                        <a data-task-id="{{ taskId.id }}" data-action="remove">
-                            <span class="glyphicon glyphicon-remove" title="Kill task"></span>
+                        <a data-task-id="{{ taskId.id }}" data-action="remove" title="Kill task">
+                            <span class="glyphicon glyphicon-remove"></span>
                         </a>
-                        <a data-task-id="{{ taskId.id }}" data-action="viewJSON">
-                            <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                        <a data-task-id="{{ taskId.id }}" data-action="viewJSON" title="JSON">
+                            <span class="glyphicon glyphicon-th-list"></span>
                         </a>
                     </td>
                 </tr>
