--- a/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
@@ -28,8 +28,8 @@
                         {{humanizeText cleanupType}}
                     </td>
                     <td class="actions-column hidden-xs">
-                        <a data-task-id="{{ taskId.id }}" data-action="viewJSON">
-                            <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                        <a data-task-id="{{ taskId.id }}" data-action="viewJSON" title="JSON">
+                            <span class="glyphicon glyphicon-th-list"></span>
                         </a>
                     </td>
                 </tr>
