--- a/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksScheduledBody.hbs
@@ -29,11 +29,11 @@
                         ({{timestampFormatted pendingTask.pendingTaskId.nextRunAt}})
                     </td>
                     <td class="actions-column hidden-xs">
-                        <a data-task-id="{{ id }}" data-action="run-now">
-                            <span class="glyphicon glyphicon-repeat" title="Run now"></span>
+                        <a data-task-id="{{ id }}" data-action="run-now" title="Run now">
+                            <span class="glyphicon glyphicon-repeat"></span>
                         </a>
-                        <a data-task-id="{{ id }}" data-action="viewJSON">
-                            <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                        <a data-task-id="{{ id }}" data-action="viewJSON" title="JSON">
+                            <span class="glyphicon glyphicon-th-list"></span>
                         </a>
                     </td>
                 </tr>
