--- a/SingularityUI/app/templates/requestDetail/requestHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistory.hbs
@@ -33,8 +33,8 @@
                             {{timestampFromNow createdAt}}
                         </td>
                         <td class="hidden-xs actions-column">
-                            <a data-action="viewJSON">
-                                <span class="glyphicon glyphicon-th-list" title="JSON"></span>
+                            <a data-action="viewJSON" title="JSON">
+                                <span class="glyphicon glyphicon-th-list"></span>
                             </a>
                         </td>
                     </tr>
