--- a/SingularityUI/app/templates/taskDetail/taskFileBrowser.hbs
+++ b/SingularityUI/app/templates/taskDetail/taskFileBrowser.hbs
@@ -58,8 +58,8 @@
                     <td class="hidden-xs" data-value="{{#if isDirectory}}a{{else}}b{{/if}} {{ mtime }}"><span title="{{ mtime }}">{{timestampFormatted mtime}}</span></td>
                     <td class="actions-column hidden-xs">
                         {{#unless isDirectory}}
-                            <a href="{{ downloadLink }}" target="_blank">
-                                <span class="glyphicon glyphicon-download-alt" title="Download"></span>
+                            <a href="{{ downloadLink }}" target="_blank" title="Download">
+                                <span class="glyphicon glyphicon-download-alt"></span>
                             </a>
                         {{/unless}}
                     </td>
