--- a/SingularityUI/app/assets/_index.mustache
+++ b/SingularityUI/app/assets/_index.mustache
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Singularity</title>
+    <title>{{ title }}</title>
     <link rel="shortcut icon" href="{{{staticRoot}}}/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="{{{staticRoot}}}/css/app.css">
@@ -14,6 +14,7 @@
         window.config = {
             appRoot: "{{{appRoot}}}",
             apiRoot: localStorage.getItem("apiRootOverride") || "{{{apiRoot}}}",
+            title: "{{{title}}}",
             mesosLogPort: {{{mesosLogsPort}}},
             {{#mesosLogsPortHttps}}
             mesosLogsPortHttps: {{{mesosLogsPortHttps}}}
