--- a/SingularityUI/app/templates/nav.hbs
+++ b/SingularityUI/app/templates/nav.hbs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{appRoot}}/">
-                Singularity
+                {{title}}
             </a>
         </div>
         
