Extracted stuff into separate class

--- a/SingularityUI/app/styles/newForm.styl
+++ b/SingularityUI/app/styles/newForm.styl
@@ -22,13 +22,16 @@
         margin-top 0
         margin-bottom 20px
 
-    em
+    .alert
+        margin-top 15px
+
+    .required label::after
+        content "required"
+        margin-left .5em
         font-weight 200
         color #999
         margin-left .5em
-
-    .alert
-        margin-top 15px
+        font-style italic
 
 .multi-input
     
