--- a/SingularityUI/app/templates/newRequest.hbs
+++ b/SingularityUI/app/templates/newRequest.hbs
@@ -4,9 +4,9 @@
 
 <div class="row new-form">
     <form class="col-md-5">
-        <div class="form-group">
-            <label for="id">ID <em>required</em></label>
-            <input type="text" id="id" class="form-control required" placeholder="my-awesome-request">
+        <div class="form-group required">
+            <label for="id">ID</label>
+            <input type="text" id="id" class="form-control" placeholder="my-awesome-request">
         </div>
 
         <div class="form-group">
@@ -64,9 +64,9 @@
         </div>
 
         <div id="scheduled-expandable" class="expandable hide">
-            <div class="form-group">
-                <label for="schedule">Schedule <em>required</em></label>
-                <input type="text" id="schedule" class="form-control required">
+            <div class="form-group required">
+                <label for="schedule">Schedule</label>
+                <input type="text" id="schedule" class="form-control">
             </div>
 
             <div class="form-group">
